--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,8 +31,8 @@ services:
     ports:
       - "8080:8080"
     command: >
-      bash -c "pip install python-telegram-bot python-dotenv &&
-             airflow webserver"
+      bash -c "pip install python-dotenv matplotlib kafka-python &&
+               airflow webserver"
 
   scheduler:
     image: apache/airflow:2.4.1
@@ -46,8 +46,68 @@ services:
     depends_on:
       - webserver
     command: >
-      bash -c "pip install python-telegram-bot python-dotenv &&
-             airflow webserver"
+      bash -c "pip install python-dotenv matplotlib kafka-python &&
+               airflow scheduler"
+
+  zookeeper:
+    image: bitnami/zookeeper:latest
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+      - JUTE_MAXBUFFER=10485760
+    ports:
+      - "2181:2181"
+
+  kafka:
+    image: bitnami/kafka:latest
+    environment:
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+
+  kafka-manager:
+    image: hlebalbau/kafka-manager:latest
+    environment:
+      ZK_HOSTS: "zookeeper:2181"
+    ports:
+      - "9000:9000"
+    depends_on:
+      - zookeeper
+      - kafka
+
+  zoonavigator:
+    image: elkozmon/zoonavigator
+    ports:
+      - "8000:8000"
+    environment:
+      ZOONAVIGATOR_CONFIG_STORAGE: "zookeeper"
+      ZOONAVIGATOR_ZK_HOSTS: "zookeeper:2181"
+    depends_on:
+      - zookeeper
+
+  superset:
+    image: apache/superset:latest
+    environment:
+      SUPERSET_SECRET_KEY: "L8OMqisXoJ3CgOtG1caOoBrFBnEkaOZlQcIDVwrSRLM="
+      SUP_DB_USER: superset
+      SUP_DB_PASS: superset
+      SUP_DB_HOST: postgres
+      SUP_DB_PORT: 5432
+      SUP_DB_NAME: superset
+    volumes:
+      - superset_home:/app/superset_home
+      - ./superset_config.py:/app/pythonpath/superset_config.py
+    ports:
+      - "8088:8088"
+    depends_on:
+      - postgres
+    command: >
+      /bin/bash -c "superset db upgrade && superset init && superset run -h 0.0.0.0 -p 8088"
+
 volumes:
   postgres_db:
   airflow_logs:
+  superset_home:
